# fsr

./: Cargo.toml
src/: action.rs  app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
